@@ -20,6 +20,7 @@ Version 1.0.8.11
      * SPARK (Phil Thornley)
      * StoneScript (Archimmersion)
      * UPC (Viraj Sinha)
+     * Vedit (Pauli Lindgren)
   -  Improvements to language files (BenBE)
      * Symbol and char literal handling for Scala (Paul Butcher, BenBE)
      * Multiline comments of F# weren't actually multiline (BenBE)
